# patchwork

./: .gitignore  AGENTS.md  BRANCH_HANDOFF.md  CLAUDE.md  MACINTOSH_BRIDGE.md  README.md  TROUBLESHOOTING.md  _headers  branches.md  flake.nix  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refs-todo.md  sideboard.patch  test-tool-urls.txt  todo.md  tsconfig.json  tsconfig.lenient.json  tsconfig.strict.json  vite.shared.ts  vitest.config.ts  vitest.workspace.ts
.changeset/: 2jw9gqbwyotbnrhxry9vgw.md  accounts-own-subdocs.md  annotations-comments.md  annotations-context.md  annotations-core.md  annotations-diff.md  annotations-equivalent-refs.md  annotations-selection-equivalent.md  annotations-selection.md  automerge-suggested-import.md  boot-patchwork-site.md  bootloader-realm-repo.md  brave-jars-tap.md  brave-rivers-sync.md  clean-poems-judge.md  curvy-pillows-rule.md  delay-initial-route.md  doc-url-hash.md  dry-pugs-act.md  dynamic-handle-remapping.md  elements-overlay-view-repo.md  expose-account-doc-handle.md  famous-rules-drop.md  flat-webs-learn.md  gentle-lies-spend.md  http-modules-package-json.md  lazy-pandas-recover.md  lazy-pots-swim.md  lazy-pumpkins-mend.md  legal-olives-rule.md  light-beds-beg.md  lucky-donkeys-shave.md  neat-react-json.md  nice-berries-hide.md  package-list-override-belongs-to-the-site.md  patchwork-bootloader-providers.md  patchwork-comments-initial.md  patchwork-elements-providers.md  patchwork-providers-initial.md  patchwork-providers-react-initial.md  (+41 more)
core/: DESIGN-tool-isolation.md  ISOLATION-ARCHITECTURE.md
docs/: plugin-versioning-guide.md
e2e/: .gitignore  README.md  bench-report.mjs  package.json  playwright.config.ts  tsconfig.json
os/: .eslintrc.cjs  (+14 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macintosh.rs  main.rs
src-tauri/swift-plugins/: const_extract_protocols.yaml
src-tauri/swift-plugins/PatchworkIntents/: Package.swift
src-tauri/swift-plugins/PatchworkIntents/Sources/: EvalInPatchworkIntent.swift  ShareToPatchworkIntent.swift
src-tauri/swift-plugins/PatchworkWidget/: Package.swift
src-tauri/swift-plugins/PatchworkWidget/Sources/: PatchworkWidget.swift
(+1058 files in other folders)
