[package]
name = "patchwork"
version = "0.1.0"
description = "A malleable software environment for collaborative work"
authors = ["Ink & Switch"]
edition = "2021"

[lib]
name = "patchwork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
