[package]
name = "patchwork"
version = "0.1.0"
description = "A malleable software environment for collaborative work"
authors = ["Ink & Switch"]
edition = "2021"

[lib]
name = "patchwork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
samod = { git = "https://github.com/alexjg/samod", features = ["tokio", "tungstenite", "axum"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.8", features = ["ws"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
